<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">projetmobile</string>
    <!-- Page1 -->
    <string name="desc1">Votre compagnon santé de &#10; tous les jours</string>
    <string name="desc2">"Vous cherchez un médecin &#10; en Tunisie ?&#10;C'est plus facile avec tibbi"</string>
    <string name="button_page1">Continuer</string>
    <!-- Page2 -->
    <string name="page2_but1">Inscripition</string>
    <string name="page2_but2">Se connecter</string>
    <!-- Page3 -->
    <string name="page3_but1">Se connecter</string>
    <string name="page3_but2">Accueil</string>
    <string name="page3_des1">Nouveau sur tbibi ?</string>
    <string name="desc_google_sign_in">Continuer avec Google</string>
    <string name="Edittext1">Nom</string>
    <string name="Edittext2">Prenom</string>
    <string name="Edittext3">Email</string>
    <string name="Edittext4">Password</string>
    <!-- Page4 -->
    <string name="page4_but1">Inscripition</string>
    <string name="page4_but2">Accueil</string>
    <string name="page4_des1">Vous avez deja utilisé tbibi ?</string>
    <string name="page4_des2">En continuant, vous accepter tous les conditions &#10;d’utilisation</string>
    <!-- Page5 -->
    <string name="page5_des1">Bienvenue ! &#10;Qui êtes-vous ?</string>
    <string name="page5_lay1_titre">Médecin</string>
    <string name="page5_lay1_des">Gérez vos rendez-vous et connectez-vous avec vos patients.</string>
    <string name="page5_lay2_titre">Patient</string>
    <string name="page5_lay2_des">Trouvez un médecin et prenez rendez-vous en quelques clics !</string>
    <!--page 6 -->
    <string name="page6_desc1">Rejoignez notre réseau de médecins!</string>
    <string name="page6_desc2">Remplissez ce formulaire en quelques minutes pour créer votre profil professionnel et commencer à recevoir des patients !</string>
    <string name="page6_Edittext1">Nom et prenom</string>
    <string name="page6_Edittext2">Numero de telephone</string>
    <string name="page6_Edittext3">Adresse</string>
    <string-array name="specialites_array">
        <item>Cardiologie</item>
        <item>Dermatologie</item>
        <item>Dentiste</item>
        <item>Gastroentérologie</item>
        <item>Géneraliste</item>
        <item>Pédiatrie</item>
        <item>Psychiatrie</item>
        <item>Ophtalmologie</item>
    </string-array>
    <string-array name="paiement_array">
        <item>Carte de crédit</item>
        <item>Virement bancaire</item>
        <item>Chèque</item>
        <item>Espèces</item>
    </string-array>
    <!--page 7 -->
    <string name="page7_des1">Prenez soin de votre santé, en quelques clics !</string>
    <string name="page7_Edittext1">Nom et prenom</string>
    <string name="page7_Edittext2">Numero de telephone</string>
    <string-array name="genre_Array">
        <item>Homme</item>
        <item>Femme</item>
    </string-array>
    <string name="default_web_client_id">66371435005-29uh9i6m0b9sgf66tfquia8amths5tb6.apps.googleusercontent.com</string>
</resources>