<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ChoixActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="187dp"
        android:layout_height="189dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/component1"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="141dp"
        android:layout_height="162dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/component2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="302dp"
        android:layout_height="73dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/page5_des1"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/layout_doctor"
        android:layout_width="154dp"
        android:layout_height="342dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/choix"
        android:elevation="2dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        android:radius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/layout_patient"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="Icône de médecin"
            android:src="@drawable/doctor1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/page5_lay1_titre"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="114dp"
            android:layout_height="113dp"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/page5_lay1_des"
            android:textColor="#000000"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_patient"
        android:layout_width="152dp"
        android:layout_height="337dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/choix"
        android:elevation="2dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        android:radius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/layout_doctor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601"
        tools:ignore="ExtraText">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:layout_marginBottom="25dp"
            android:contentDescription="Icône de patient"
            android:src="@drawable/examination1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:text="@string/page5_lay2_titre"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="111dp"
            android:layout_height="111dp"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/page5_lay2_des"
            android:textColor="#000000"
            android:textSize="15sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>