<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MedecinActivity">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="201dp"
        android:layout_height="210dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/component1"
        tools:ignore="MissingConstraints" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="198dp"
        android:layout_height="233dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/component2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="325dp"
        android:layout_height="39dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/page6_desc1"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="322dp"
        android:layout_height="70dp"
        android:fontFamily="@font/poppins"
        android:text="@string/page6_desc2"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311"
        app:srcCompat="@drawable/bar"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/med_nompre"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:background="@drawable/button_bordureblack"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/page6_Edittext1"
        android:inputType="text"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey_black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393"
        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/med_phone"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:background="@drawable/button_bordureblack"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/page6_Edittext2"
        android:inputType="phone"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey_black"
        android:textSize="14sp"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />



    <Spinner
        android:id="@+id/spinner_specialite"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:background="@drawable/button_bordureblack"
        android:paddingStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528" />

    <EditText
        android:id="@+id/med_adr"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:background="@drawable/button_bordureblack"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/page6_Edittext3"
        android:inputType="text"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey_black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinner_paiement"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:background="@drawable/button_bordureblack"
        android:paddingStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <ImageButton
        android:id="@+id/Button_med_ins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841"
        app:srcCompat="@drawable/ellipse14"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>