<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PatientActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="201dp"
        android:layout_height="210dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/component1"
        tools:ignore="MissingConstraints" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="198dp"
        android:layout_height="233dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/component2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="308dp"
        android:layout_height="72dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/page7_des1"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32"
        app:srcCompat="@drawable/bar" />
    <EditText
        android:id="@+id/pat_nompre"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:background="@drawable/button_bordureblack"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/page7_Edittext1"
        android:inputType="text"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey_black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393"
        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/pat_phone"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:background="@drawable/button_bordureblack"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/page7_Edittext2"
        android:inputType="phone"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey_black"
        android:textSize="14sp"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/editTextDateNaissance"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:background="@drawable/button_bordureblack"
        android:clickable="true"
        android:focusable="false"
        android:hint="Date de Naissance"
        android:inputType="none"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey_black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.532"
        tools:ignore="MissingConstraints" />


    <Spinner
        android:id="@+id/spinner_genre"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:background="@drawable/button_bordureblack"
        android:paddingStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.608" />

    <Spinner
        android:id="@+id/spinner_specialite"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:background="@drawable/button_bordureblack"
        android:paddingStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.682" />


</androidx.constraintlayout.widget.ConstraintLayout>